# hosc-bytestring

./: hosc-bytestring.cabal
Sound/OpenSoundControl/: ByteString.hs
Sound/OpenSoundControl/OSC/: Builder.hs
Sound/OpenSoundControl/Transport/ByteString/: TCP.hs  UDP.hs
Sound/OpenSoundControl/Transport/UDP/: ByteString.hs
benchmarks/: encoding.hs
benchmarks/Sound/OpenSoundControl/: NFData.hs
tests/: test.hs
tests/Sound/OpenSoundControl/: Arbitrary.hs
