Name:              hosc-bytestring
Version:           0.10
Synopsis:          Haskell Open Sound Control (ByteString extensions)
Description:       hosc provides Sound.OpenSoundControl, a haskell
                   module implementing a subset of the Open Sound
                   Control byte protocol.
License:           GPL
Category:          Sound
Copyright:         (c) Rohan Drape, Stefan Kersten, 2011
Author:            Stefan Kersten
Maintainer:        Stefan Kersten <sk@xdv.org>
Stability:         Experimental
Homepage:          http://slavepianos.org/rd/?t=hosc
Tested-With:       GHC == 6.12.1, GHC == 7.0.1
Build-Type:        Simple
Cabal-Version:     >= 1.6

Data-Files:        README
                   Help/timer.hs

Library
  Build-Depends:  array
                 , base == 4.*
                 , bytestring
                 , blaze-builder >= 0.3
                 , hosc >= 0.10
                 , network >= 2.3
  GHC-Options:     -Wall -fwarn-tabs
  GHC-Prof-Options:-Wall -fwarn-tabs -auto-all
  Exposed-modules: Sound.OpenSoundControl.ByteString
                   Sound.OpenSoundControl.Transport.ByteString.TCP
                   Sound.OpenSoundControl.Transport.ByteString.UDP

Source-Repository  head
  Type:            darcs
  Location:        http://slavepianos.org/rd/sw/hosc/

Test-Suite hosc-bytestring-test
    Type: exitcode-stdio-1.0
    Main-Is: test.hs
    Other-Modules:
        Sound.OpenSoundControl.Arbitrary
    Build-Depends:
        base
      , bytestring
      , blaze-builder >= 0.3
      , hosc >= 0.10
      , network >= 2.3
      , QuickCheck >= 2
      , test-framework >= 0.2
      , test-framework-quickcheck2 >= 0.2
    Hs-Source-Dirs: tests, .
