Name:              hosc-bytestring
Version:           0.10
Synopsis:          ByteString extensions for hosc
Description:       hosc-bytestring is based on hosc (<http://hackage.haskell.org/package/hosc>) and provides optimized functions for encoding packets and sending them through UDP sockets.
License:           GPL
Category:          Sound
Copyright:         (c) Rohan Drape, Stefan Kersten, 2011
Author:            Stefan Kersten
Maintainer:        Stefan Kersten <sk@xdv.org>
Stability:         Experimental
Homepage:          https://github.com/kaoskorobase/hosc-bytestring
Tested-With:       GHC == 6.12.1, GHC == 7.0.1
Build-Type:        Simple
Cabal-Version:     >= 1.6

Flag benchmark
    Description: Enable benchmarks
    Default: False

Library
    Build-Depends: 
        array
      , base == 4.*
      , bytestring
      , blaze-builder >= 0.3
      , hosc >= 0.9
      , network >= 2.3
    Exposed-modules:
        Sound.OpenSoundControl.ByteString
        Sound.OpenSoundControl.Transport.UDP.ByteString
    GHC-Options:      -Wall -fwarn-tabs
    GHC-Prof-Options: -Wall -fwarn-tabs -auto-all

Executable benchmark-encoding
    if !flag(benchmark)
        Buildable: False
    Hs-Source-Dirs: benchmarks, .
    Main-Is: encoding.hs
    Other-Modules:
        Sound.OpenSoundControl.NFData
    Build-Depends:
        criterion
      , deepseq
    GHC-Options:      -Wall -fwarn-tabs
    GHC-Prof-Options: -Wall -fwarn-tabs -auto-all

Test-Suite hosc-bytestring-test
    Type: exitcode-stdio-1.0
    Hs-Source-Dirs: tests, .
    Main-Is: test.hs
    Other-Modules:
        Sound.OpenSoundControl.Arbitrary
    Build-Depends:
        QuickCheck >= 2
      , test-framework >= 0.2
      , test-framework-quickcheck2 >= 0.2
    GHC-Options:      -Wall -fwarn-tabs
    GHC-Prof-Options: -Wall -fwarn-tabs -auto-all

Source-Repository  head
  Type:            git
  Location:        git://github.com/kaoskorobase/hosc-bytestring.git
